rustcc/tests/input/Lexer/invalid/invalid_identifier_2.c
// RUN: ${{rustcc}}

int main(void)
{
    return @b;
}